[tool.poetry]
name = "reverse-indexing"
version = "0.1.0"
description = ""
authors = ["RainrainWu <s0958334772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "20.8b1"
redis = "3.5.3"
pytest = "6.1.2"
Flask = "1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
